jupyter_alabaster_theme/jupyter/static/css/jupytertheme.css
/* ... */
.deprecated {
    border-radius: 3px;
}

table.docutils {
    border: 1px solid #ddd;
    min-width: 20%;
    border-radius: 3px;
    margin-top: 10px;
    margin-bottom: 10px;
}

table.docutils td, table.docutils th {
    border: 1px solid #ddd !important;
    border-radius: 3px;
}

table p, table li {
    text-align: left !important;
}

table.docutils th {
    background-color: #eee;
    padding: 0.3em 0.5em;
}

table.docutils td {
    background-color: white;
    padding: 0.3em 0.5em;
}

table.footnote, table.footnote td {
    border: 0 !important;
}
/* Search results page styling */
ul.search li {
  background-image: url(../_images/file.svg);
  background-repeat: no-repeat;
  background-position-y: 6px;
  list-style-type: none;
  padding: 5px 0 5px 24px;
}

ul.search li a {
  font-size: 16px;
  color: #1565C0;
  letter-spacing: .4px;
}

ul.search li div.context {
  color: #9E9E9E;
  font-size: 13px;
  margin: 6px 0px 0px 36px;
}

ul.search div.context span.highlighted {
  background-color: transparent;
  color: #616161;
  font-weight: 500;
}

.refcount {
    color: #060;
}

.stableabi {
    color: #229;
}

.highlight {
    background: none !important;
}
p.caption {
    margin: 24px 0px 5px 0px;
    font-size: 20px;
    font-weight: 500;
}

/* Mobile Navbar Styling */
.mobile-nav-current {
  max-width: 90%;
  display: inline-block;
}

.mobile-nav-current-dropdown {
    padding: 16px 20px;
    border: 2px solid #BDBDBD;
    border-radius: 4px;
    margin-bottom: 12px;
}

.mobile-nav-current-section {
    margin: 0px;
    color: #757575;
    padding-bottom: 4px;
    font-weight: 400;
}

.mobile-nav-current-page {
    margin-top: 0px;
    font-weight: 500;
    margin-bottom: 0px;
}

.mobile-nav-section {
  padding: 0px;
  width: 100%;
}

.mobile-nav-section:active {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  -o-box-shadow: none;
  box-shadow: none;
}

.mobile-nav-header {
    font-size: 20px;
    margin: 12px 0px;
    float: left;
}

.mobile-nav-items {
  padding-left: 16px;
}

.mobile-nav-items .toctree-l1 .current {
  color: #F37726;
  font-weight: 500;
}

.mobile-nav-items .toctree-l2 .current {
  color: #F37726;
  font-weight: 500;
}

.top-mobile-nav-expand {
  float: right;
  /* 17.5px is half of the height of the top navigation box */
  padding-top: 17.5px;
}

.mobile-nav-expand {
  float: right;
  padding-top: 12px;
}

.mobile-nav-expand-icon {
    -webkit-transition: .2s ease-in-out;
    -moz-transition: .2s ease-in-out;
    -o-transition: .2s ease-in-out;
    transition: .2s ease-in-out;
    float: right;
}

.close-icon {
  /* Add this class to a mobile nav item expanded to rotate */
  -webkit-transform: rotate(45deg);
  -mox-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.toctree-l1 > a.reference {
  color: #757575;
  font-size: 18px;
  text-decoration: none;
  border-bottom: none;
}

.toctree-l2 > a.reference {
  color: #757575;
  font-size: 18px;
  text-decoration: none;
  border-bottom: none;
}

/* Sidebar search box */
 #searchbox {
   padding-top: 8px;
 }
 .docs-search-input {
   height: 28px;
   border: 1px solid #BDBDBD;
   padding-left: 8px;
 }
 .docs-search-input:focus {
   outline: none;
   border: 1px solid #757575;
 }
 .docs-search-submit {
   border: none;
   position: relative;
   top: 6px;
   left: -4px;
   height: 28px;
   width: 36px;
   background-color: #757575;
   background-image: url('../_images/search.svg');
   background-repeat: no-repeat;
   background-size: 20px;
   background-position: center;
 }

/* First Level Nav Link in Sidebar */
.toctree-l1 {
    color: #757575;
    font-size: 18px;
    list-style-type: none;
    margin: 5px 0px;
}
.bs-sidenav {
    margin-bottom: 40px;
}
.bs-sidenav .toctree-l1 .current {
    color: #F37726;
    font-weight: 500;
}
.bs-sidenav .toctree-l1 .current:hover {
    color: #F37726;
}
.bs-sidenav .toctree-l1 ul {
    margin: 12px 0px 12px 12px;
}
/* Second Level Nav Link in Sidebar */
.toctree-l2 {
    font-size: 16px;
    list-style-type: none;
    margin: 8px 10px;
}
.bs-sidenav .toctree-l2 .current {
    color: #F37726;
}
.bs-sidenav .toctree-l2 .current:hover {
    color: #F37726;
}

.bs-sidenav ul {
    margin-left: 0px;
}
.bs-sidenav .reference {
    color: #757575;
    border-bottom: none;
    transition: color .25s ease-in-out;
    -moz-transition: color .25s ease-in-out;
    -webkit-transition: color .25s ease-in-out;
}
.bs-sidenav .reference:hover {
    color: #424242;
    text-decoration: none;
    border-bottom: none;
}
.content {
  padding-left: 24px;
  padding-right: 24px;
  margin-bottom: 48px;
}
.content h1, .bs-sidenav h1 {
    font-size: 36px;
    font-weight: 400;
}
.bs-sidenav h1 a {
    color: black;
}

.content h2 {
    font-size: 28px;
    font-weight: 400;
}
.content h3 {
    font-size: 20px;
    font-weight: 500;
}
.content p {
    line-height: 24px;
}
.content .reference {
    color: #D95E1C;
    border-bottom: none;
    font-weight: 500;
}
.content .reference:hover {
    border-bottom: none;
    text-decoration: none;
}
.docs-breadcrumbs {
    height: 36px;
    background-color: #757575;
    padding: 0px;
}
.docs-breadcrumbs ul {
    margin-left: 0px;
}
.docs-breadcrumb-item {
    list-style-type: none;
    display: inline;
    color: white;
    font-size: 16px;
    line-height: 2.2;
    height: 24px;
}
.docs-breadcrumb-item a {
    color: white;
    letter-spacing: .8px;
}
.figure img {
  width: 100%;
}
.breadcrumb-home {
    height: 24px;
}
.breadcrumb-separator {
    height: 12px;
    padding: 0px 12px;
}
.toc-backref {
    color: #424242;
}
.toc-backref:hover {
    color: #424242;
}
.section img {
  width: 100%;
}
/* Bootstrap Breakpoint Media Queries */

/* Medium devices (desktops, 992px and up) */
@media (max-width: 992px) {
    div.follow {
        float: left;
        margin-top: 8px;
        margin-bottom: 20px;
    }
    .navbar-text {
        margin-left: 0px;
    }
}
/* ... */

